<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="uicore_ok">OK</string>
    <string name="uicore_save">Save</string>
    <string name="uicore_back">Back</string>
    <string name="uicore_cancel">Cancel</string>
    <string name="uicore_delete">Delete</string>
    <string name="uicore_close">Close</string>
    <string name="uicore_edit">Edit</string>
    <string name="uicore_date">Date</string>
    <string name="uicore_time">Time</string>
    <string name="uicore_discard_changes_title">Discard changes?</string>
...
